--- a/src/components/comments/comments.css
+++ b/src/components/comments/comments.css
@@ -4,3 +4,9 @@
     padding: 9px;
     display: grid;
 }
+
+@media only screen and (max-width: 425px) {
+    .Comment-styling{
+        font-size: 0.6em;
+    }
+}
