--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -25,3 +25,28 @@ main {
 .grid-div{
     grid-column: 1 / 3;
 }
+
+img {
+    width: 500px;
+    border-radius: 5px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+    .grid-div{
+        grid-column: 1 / 4;
+    }
+
+    main{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .postDetails{
+        font-size: 0.2em;
+    }
+
+    img {
+        width: 250px;
+    }
+}
+
