--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+p{
+  padding-right: 6px;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -67,5 +71,15 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  h1{
+    font-size: 1.2em;
+  }
+
+  h2{
+    font-size: 1em;
   }
 }
