Styling for Tablet screen size

--- a/src/components/subreddits/subreddit.css
+++ b/src/components/subreddits/subreddit.css
@@ -24,3 +24,9 @@
         font-size: small;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .subredditStyling{
+        grid-column: 1 / 4;
+    }
+}
