--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -53,5 +53,6 @@ img {
 @media only screen and (max-width: 768px) {
     .grid-div{
         grid-column: 1 / 4;
+        padding-right: 20px;
     }
 }
